# haversine

./: .gitignore  Cargo.toml  README.md
.run/: Debug profiling tests.run.xml  Run haversine gen.run.xml  Run haversine.run.xml  Run profiling tests.run.xml
haversine/: Cargo.toml
haversine/src/: lib.rs  main.rs  parser.rs  profile.rs  profile_stub.rs  timer.rs
haversine_gen/: Cargo.toml
haversine_gen/src/: main.rs  rand.rs
metrics/: Cargo.toml
metrics/src/: lib.rs  memory.rs  repetition_tester.rs  timing.rs
profiling_tests/: Cargo.toml  build.rs
profiling_tests/src/: main.rs  nop_loop.asm  nop_loop.rs  read_tests.rs  testing.rs
profiling_tests/src/asm/: cache_size.asm  read_widths.asm  write_ports.asm
profiling_tests/src/testing/: branch_predictor_tests.rs  cache_tests.rs  mod.rs  read_tests.rs  simd_tests.rs  write_tests.rs
profiling_tests/src/testing/write_tests/: mod.rs
profiling_tests/src/write_tests/: mod.rs  write_to_all_bytes.rs
