[package]
name = "profiling_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
enum-iterator = "2.0"
metrics = { path = "../metrics" }

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
]

[build-dependencies]
cc = "1.0"
glob = "0.3"
